# dart_datachannel

./: .gitignore  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  local.properties.example
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt
demos/flutter_example/: README.md  pubspec.yaml
demos/flutter_example/android/: local.properties
demos/flutter_example/lib/: main.dart
demos/flutter_example/linux/: CMakeLists.txt
demos/flutter_example/linux/flutter/: generated_plugins.cmake
demos/flutter_example/linux/runner/: my_application.cc
demos/flutter_example/test/: widget_test.dart
docs/: ARCHITECTURE.md  DEVELOPER.md  FLUTTER_EMBEDDING.md  TESTING.md
example/: pubspec.yaml
example/lib/: main.dart
ios/: CMakeLists.txt  flutter_datachannel.podspec
lib/: dart_datachannel.dart  flutter_datachannel.dart
lib/src/: datachannel_client.dart  datachannel_config.dart  datachannel_engine.dart  datachannel_hybrid.dart  datachannel_server.dart
lib/src/events/: datachannel_events.dart
lib/src/ffi/: bindings.g.dart  native_library.dart
linux/: CMakeLists.txt
macos/: CMakeLists.txt
native/: CMakeLists.txt
native/include/: fdc_ffi.h
native/server/src/: main.cpp
native/src/: fdc_ffi.cpp  ollama_proxy.cpp  ollama_proxy.hpp  signaling_client.cpp  signaling_client.hpp
scripts/: build_native.sh
test/: datachannel_config_test.dart
tools/: signaling_server.py
windows/: CMakeLists.txt
